[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url-shortener"
version = "0.1.0"
description = "Simple URL shortener API"
authors = [{ name = "Developer", email = "dev@example.com" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "python-multipart>=0.0.6",
  "pydantic>=2.5.0",
  "httpx>=0.26.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.2.0",
  "black>=24.0.0"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402"]